compile main.scss

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="./src/sass/main.scss" />
+    <link rel="stylesheet" href="./src/main.css" />
 
     <title>Time tracking dashboard</title>
 
