make card article instead of div

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <main class="main">
       <div class="report">
-        <div class="report__item report__item--sidebar">
+        <article class="report__item report__item--sidebar">
           <div class="report__person-info">
             <img
               src="./images/image-jeremy.png"
@@ -47,7 +47,7 @@
               Monthly
             </button>
           </div>
-        </div>
+        </article>
       </div>
     </main>
   </body>
