--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <title>Time tracking dashboard</title>
 
-    <script src="./src/main.js" type="module" defer></script>
+    <script src="./src/app.js" type="module" defer></script>
   </head>
   <body>
     <main class="main">
